# trace

./: README.md  package.json  pnpm-lock.yaml
backend/rector-api-main/: app.py  email-agent.py  men's_micro_d®_fleece_jacket_analysis.json  package-lock.json  patagonia_products.csv  patagonia_products.json  perplexity_client.py  perplexity_endpoint.py  perplexity_search.py  private_keys.json  requirements.txt  scrape_model.py  scraper-factory.py  scraper.py  sustainability-client.py  sustainability_agent.py  sustainability_score.py  tag.py  test-scrape-agent.py  test.py  test_email.py  vercel.json
backend/rector-api-main/analyses/: men's_micro_d®_fleece_jacket_patagonia_analysis.json
backend/trace-chat/: adapter.py  email-test.py  pyproject.toml  requirements.txt
backend/trace-chat/src/trace_chat/: api.py  crew.py  main.py
backend/trace-chat/src/trace_chat/config/: agents.yaml  tasks.yaml
backend/trace-chat/src/trace_chat/tools/: supply_chain_tools.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/(private)/: layout.tsx
src/components/: ai-sidebar.tsx  app-sidebar.tsx  loader.tsx  loading-map.tsx  product-info.tsx  right-sidebar.tsx  thinking-indicator.tsx
src/components/dashboard/: analysis-dialog.tsx  bar-chart-interactive.tsx  carbon-emissions.tsx  cards-row.tsx  chart-area-interactive.tsx  dropzone.tsx  (+3 more)
src/styles/: globals.css
src/types/: flow.ts  scrape.ts  supply-chain.ts
src/utils/: charts.ts  company-dashboard-data.ts  esg-chart-data.ts  example-convo.txt  example-product.json  example-respone.json  flow-config.ts  image.ts
(+25 files in other folders)
